add images in merchant services

--- a/Views/products_services/index.cshtml
+++ b/Views/products_services/index.cshtml
@@ -122,14 +122,15 @@
                     </div>
                     <div class="content-box-hdr">
                         <div class="box-hdr-col-3-00-1">
-                            <div class="content-box-hdr-lt"></div>
+                            <div class="content-box-hdr-lt">
+                            </div>
                             <div class="box-hdr-col-3-00-1-hdr">MERCHANT SERVICES</div>
                         </div>
                         <div class="box-hdr-col-3-00-2">
                             <div class="box-hdr-col-3-00-2-hdr">NOW YOU CAN</div>
                         </div>
                         <div class="box-hdr-col-3-00-3">
-                            <div class="box-hdr-col-3-00-3-hdr">REALIZE THE BENEFITS</div>
+                            <div class="box-hdr-col-3-00-3-hdr" style="padding-left: 0px;">REALIZE THE BENEFITS</div>
                             <div class="content-box-hdr-rt"></div>
                         </div>
                     </div>
@@ -142,25 +143,33 @@
                                 This enables us to empower our merchants to gain momentum in moving and growing their own businesses.
                             </div>
                         </div>
-                        <div class="box-body-col-3-00-2">
-                            <div class="box-body-col-3-00-2-body">
-                                <ul>
-                                    <li>Accept payments securely</li>
-                                    <li>Use practical POS</li>
-                                    <li>Access real time reports</li>
-                                    <li>Use loyalty programs</li>
-                                </ul>
+                        <div class="box-body-col-3-00-2-body padding-lt-none" style="width: 280px;">
+                            <div class="box-body-col-3-00-1-body-col-2-1 align-ctr">
+                                <div class="margin-img">
+                                    <img src="../../Content/5E1A2906-F51C-4915-84D1-5FD49ED9C18B/images/img-poynt.png" style="width: 92px;" />
+                                </div>
+                            </div>
+                            <div class="box-body-col-3-00-1-body-col-2-2" style="width: 63%;">
+                                - Accept payments securely<br />
+                                - Use practical POS<br />
+                                - Access real time reports<br />
+                                - Use loyalty programs<br />
                             </div>
                         </div>
                         <div class="box-body-col-3-00-3">
-                            <div class="box-body-col-3-00-3-body">
-                                <ul>
-                                    <li>Offer more payment options to your customers</li>
-                                    <li>Protect your business from lost revenue</li>
-                                    <li>Reduce fraud and simplify payment processes</li>
-                                    <li>Monitor your transactions real time</li>
-                                    <li>Set automatic recurring billing</li>
-                                </ul>
+                            <div class="box-body-col-3-00-3-body padding-lt-none" style="padding-left: 5px; width: 350px;">
+                                <div class="box-body-col-3-00-1-body-col-2-1 align-ctr" style="width: 21%;">
+                                    <div class="margin-img">
+                                        <img src="../../Content/5E1A2906-F51C-4915-84D1-5FD49ED9C18B/images/img-pw_shield.png" style="width: 45px;" />
+                                    </div>
+                                </div>
+                                <div class="box-body-col-3-00-1-body-col-2-2" style="width: 79%;">
+                                    - Offer more payment options to your customers<br />
+                                    - Protect your business from lost revenue<br />
+                                    - Reduce fraud and simplify payment processes<br />
+                                    - Monitor your transactions real time<br />
+                                    - Set automatic recurring billing<br />
+                                </div>
                             </div>
                             <div class="content-box-body-rt"></div>
                         </div>
