Esquire Bank => Esquire Bank NA

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                 play: 25000
             });            
         });
+
+        //window.location.href = "https://www.paymentworld.com";
 	</script>
 
 </head>
@@ -106,7 +108,7 @@
                     
                     PAYMENTWORLD, LLC IS A REGISTERED ISO/MSP OF THE FOLLOWING BANKS:<br />
                     MERRICK BANK, SOUTH JORDAN, UT<br />
-                    ESQUIRE BANK, GARDEN CITY, NY<br />
+                    ESQUIRE BANK NA, GARDEN CITY, NY<br />
                     &#169 @DateTime.Now.Year.ToString() PAYMENTWORLD, LLC. ALL RIGHTS RESERVED. 
                 
                 </div>
